--- a/vishystyle.css
+++ b/vishystyle.css
@@ -29,6 +29,7 @@ section {
 .introContainer{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-direction: row;
 }
 
@@ -40,18 +41,18 @@ section {
     max-width: 300px;
     height: auto;
     display: block;
-    margin: 0.5rem 0;
+    margin: 0.5rem;
     border-radius: 8px;
 }
 
 ul {
     list-style-type: none;
-    padding: 0;
+    padding: 0.25rem;
 }
 
 ul li {
     background: #e2e2e2;
-    margin: 0.5rem 0;
+    margin: 0.5rem;
     padding: 0.5rem;
     border-radius: 4px;
 }
